Fixed layout issues

--- a/src/index.scss
+++ b/src/index.scss
@@ -14,8 +14,12 @@ html, body {
 :global(.top-row) {
     flex: 0 1 auto;
     padding: 1em 1em 0 1em;
+    display: flex;
+    justify-content: center;
 }
 
 :global(.content) {
     flex: 1 1 auto;
+    display: flex;
+    justify-content: center;
 }
